--- a/newform.html
+++ b/newform.html
@@ -88,8 +88,10 @@
                   <p class="description">
                     <input type="text" required placeholder="Açıqlama" id="description">
                   </p>
-                  <p class="firstquestion">
-                    <input type="text" required placeholder="İlk sualımız budur ki,...">
+                </form>
+                <form id="question-section">
+                  <p class="question" id="question">
+                    <input type="text" required placeholder="İlk sualımız budur ki,..." value="" id="question-input">
                   </p>
                   <select id="chooseSelect">
                     <option value="radio" class="tablinks">Radiobox <i class="fa fa-angle-down"></i></option>
@@ -105,7 +107,6 @@
                         value="Birinci cavab"></label><br />
                     <label><input type="radio" name="rad" id="" /><input class="text" type="text"
                         value="Birinci cavab"></label><br />
-                    <label> Digər <input class="digertype" type="text" /></label>
                   </div>
                   <div class="checksection tabcontent check box" id="Check">
                     <label><input type="checkbox" id="" /><input class="text" type="text"
@@ -117,17 +118,17 @@
                     <label><input type="checkbox" id="" /><input class="text" type="text"
                         value="Birinci cavab"></label><br />
                     <div id="addSelect"></div>
-                    <label>Digər <input class="digertype" type="text" /></label>
                   </div>
                   <div class="opensection tabcontent open box" id="Open">
-                    Cavab <input class="digertype" type="text" />
+                    <label>
+                      Cavab <input class="openAnswer" type="text" />
+                    </label>
                   </div>
                   <div id="addOther"></div>
-                  <div class="other text-right pb-5 px-3">
+                  <div class="other text-right pb-5 px-3" id="func-buttons">
                     <button type="button" class="btn btn-link" id="other" onclick="addOther()">Digər...</button>
-                    <button type="button" class="btn btn-outline-primary">Sual əlavə et</button>
-                    <button type="button" class="btn btn-outline-primary" onclick="addSelect()">Variant əlavə
-                      et</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="addQuestion()">Sual əlavə et</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="addSelect()">Variant əlavə et</button>
                     <button type="button" class="delete-button btn btn-outline-danger">Sil</button>
                   </div>
                 </form>
@@ -169,9 +170,6 @@
   <script src="assets/js/jquery-3.5.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/scripts.js"></script>
-  <script>
-
-  </script>
 </body>
 
 </html>
