Revert "button links and hover problems,naming conventions"

--- a/mainPage.html
+++ b/mainPage.html
@@ -52,7 +52,7 @@
         <li>
           <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
           <ul class=" list-unstyled active dropdown  align-items-center d-flex flex-column">
-            <li> <a href="allUsers.html"><span>Bütün</span></a></li>
+            <li > <a href="allUsers.html"><span>Bütün</span></a></li>
             <li><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
@@ -73,7 +73,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href=""><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
@@ -168,90 +168,90 @@
               </div>
             </div>
           </div>
-          <div class="bottom-card card  card-big col-11 ">
+            <div class="bottom-card card  card-big col-11 ">
 
-            <div class="card-body">
+              <div class="card-body">
 
-              <div class="card-content col-12">
-                <div class="row justify-content-between  align-items-end ">
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
+                <div class="card-content col-12">
+                  <div class="row justify-content-between  align-items-end ">
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
 
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
-                          </div>
-                        </div>
-                      </div>
-
-                    </div>
-                  </div>
-
-
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
-
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
-
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
                         </div>
 
                       </div>
-
                     </div>
-                  </div>
 
 
-                  <div class="card card-small col-md-3 col-12">
-                    <div class="card-body">
-                      <div class="card-content d-flex justify-content-center align-items-center">
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
 
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
+
                         </div>
 
                       </div>
-
                     </div>
+
+
+                    <div class="card card-small col-md-3 col-12">
+                      <div class="card-body">
+                        <div class="card-content d-flex justify-content-center align-items-center">
+
+                          <div class="small-card-text">
+                            <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
+
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
+                          </div>
+
+                        </div>
+
+                      </div>
+                    </div>
+
+
+
+                    <button class="btn col-md-2 col-12 btn-outline-primary "><a href="results.html">See All</a></button>
+
                   </div>
-
-
-
-                  <button class="btn col-md-2 col-12 btn-outline-primary "><a href="results.html">See All</a></button>
-
                 </div>
               </div>
             </div>
-          </div>
 
         </div>
       </section>
