--- a/allUsers.html
+++ b/allUsers.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Results</title>
+  <title>All Users</title>
 
   <!-- Bootstrap Styles-->
   <link href="assets/lib/bootstrap.css" rel="stylesheet" />
@@ -46,8 +46,8 @@
         </li>
         <li>
           <a href="#" class="users"> <img src="assets/img/Path 591.png" alt=""> <span> İstifadəçilər</span></a>
-          <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
-            <li> <a href="allUsers.html"><span>Bütün</span></a></li>
+          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
+            <li class="active"> <a href="allUsers.html"><span>Bütün</span></a></li>
             <li><a href="newUser.html"><span>Yarat</span></a></li>
 
           </ul>
@@ -63,62 +63,62 @@
 
         <li>
 
-          <a href="profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
+          <a href="./profile.html"> <img src="assets/img/Group 375.png" alt=""> <span>Parametrlər </span> </a>
         </li>
 
       </ul>
       <div class="footer text-center">
-        <a href=""><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
     <div id="content" class="">
 
 
-      <section class="users min-vh-100 d-flex align-items-center justify-content-center my-4">
+      <section class="users-section min-vh-100 d-flex align-items-center justify-content-center">
         <div class="container">
           <div class="row">
-            <table
-              class="table table-striped table-responsive-sm  table-light col-xl-11 col-lg-10 col-md-10 col-sm-8 col-10 mx-auto">
+            <table class="table table-striped table-light col-xl-11 col-lg-10 col-md-10 col-sm-8 col-8 mx-auto ">
 
               <caption class="table-active">
 
-                <span>Form 1 - Nəticələr </span>
+                <span>Bütün İstifadəçilər </span>
 
-                <button type="button" class="btn btn-md btn-outline-primary"><a href="export.html">Export</a></button>
+                <button class="add-button btn btn-md btn-outline-primary"><a href="newUser.html">Əlavə et</a></button>
 
               </caption>
 
               <thead>
                 <th scope="col">#</th>
+                <th scope="col">Username</th>
+                <th scope="col">Rol</th>
+                <th scope="col">Mail</th>
                 <th scope="col">Ad</th>
                 <th scope="col">Soyad</th>
-                <th scope="col">Tarix</th>
-                <th scope="col">Sual #1</th>
-                <th scope="col">Sual #2</th>
-                <th scope="col">Sual #3</th>
-                <th scope="col">Sual #4</th>
-                <th scope="col">Sual #5</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
+                <th scope="col">Sorğu sayı</th>
+
                 </tr>
               </thead>
               <tbody>
 
+
                 <tr>
                   <th scope="row">1</th>
+                  <td>mleyla</td>
+                  <td>admin</td>
+                  <td>leyla@sample.com</td>
                   <td>Leyla</td>
                   <td>Mammadova</td>
-                  <td>06/06/2020<br>16:20</td>
-                  <td>Razıyam</td>
-                  <td>Xeyr</td>
-                  <td>Facebook</td>
-                  <td>Digər</td>
-                  <td>700azn</td>
-                  <td> <a href="" data-toggle="modal" class="delete-button text-danger">Sil</a></td>
+                  <td>10</td>
                   <td>
-                    <a href="./inspect.html" class="text-success pr-3">Bax</a> </td>
+                    <a href="" data-toggle="modal" class="edit-button text-success pr-3">Redaktə et</a>
+                  </td>
+
+                  <td><a href="" data-toggle="modal" class="delete-button text-danger">Sil</a> </td>
                 </tr>
+
+
+
 
                 <tr>
                   <th scope="row"></th>
@@ -130,9 +130,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -144,9 +143,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -158,9 +156,9 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
+
 
                 <tr>
                   <th scope="row"></th>
@@ -172,9 +170,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -186,9 +183,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -200,9 +196,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -214,9 +209,8 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
+
 
                 <tr>
                   <th scope="row"></th>
@@ -228,27 +222,16 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                  <td></td>
-                  <td></td>
                 </tr>
 
-                <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
+
+
+
               </tbody>
             </table>
           </div>
         </div>
+
         <div class="modal" id="edit-modal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -263,12 +246,12 @@
                   <div class="form-row justify-content-around d-flex">
                     <div class="form-group col-sm-5 col-12">
                       <label for="username">İstifadəçi adı</label>
-                      <input type="text" class="form-control" name="username" id="username">
+                      <input type="text" class="form-control" name="username" id="username" required>
                     </div>
 
                     <div class="form-group col-sm-5 col-12">
                       <label for="email">Email</label>
-                      <input type="email" class="form-control" name="email" id="email">
+                      <input type="email" class="form-control" name="email" id="email" required>
                     </div>
                   </div>
 
@@ -322,20 +305,18 @@
                       </div>
 
                     </div>
+
+
                   </div>
 
-                  <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary save-changes-button">Yadda saxla</button>
-                    <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Ləğv
-                      et</button>
-                  </div>
-
-                </form>
 
               </div>
-
-
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary save-changes-button ">Yadda saxla</button>
+                <button type="button" class="btn btn-secondary cancel-button" data-dismiss="modal">Ləğv et</button>
+              </div>
             </div>
+            </form>
           </div>
         </div>
 
@@ -361,11 +342,9 @@
             </div>
           </div>
         </div>
-
       </section>
     </div>
   </div>
-
 
   <script src="assets/js/jquery-3.5.1.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
