Revert "Revert "button links and hover problems,naming conventions""

--- a/allQueries.html
+++ b/allQueries.html
@@ -68,7 +68,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href=""><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
@@ -106,11 +106,11 @@
                   <td>31/12/20</td>
                   <td>10</td>
                   <td class="buttons">
-                    <button type="button"><a href="./redakteEt.html" class="btn text-success">Redaktə et</a></button>
+                    <button type="button"><a href="./edit.html" class="btn text-success">Redaktə et</a></button>
                     <button type="button"><a href="./results.html" class="btn edit text-primary">Nəticələr</a></button>
                     <button type="button" class="btn delete-button text-danger" data-toggle="modal"
                       data-target="#exampleModal">Sil</button>
-                    <button type="button"><a class="btn text-success" href="./tamamla.html">Tamamla</a></button>
+                    <button type="button"><a class="btn text-success" href="./complete.html">Tamamla</a></button>
                   </td>
                 </tr>
 
