--- a/newform.html
+++ b/newform.html
@@ -67,7 +67,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href=""><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
+        <a href="./mainPage.html"><img src="assets/img/logout.png" alt=""> <span>Profildən çıxış</span></a>
       </div>
 
     </nav>
@@ -117,18 +117,17 @@
                         value="Birinci cavab"></label><br />
                     <label><input type="checkbox" id="" /><input class="text" type="text"
                         value="Birinci cavab"></label><br />
-                    <div id="addSelect"></div>
                   </div>
                   <div class="opensection tabcontent open box" id="Open">
                     <label>
-                      Cavab <input class="openAnswer" type="text" />
+                      Cavab <input class="openAnswer othertype" type="text" />
                     </label>
                   </div>
-                  <div id="addOther"></div>
                   <div class="other text-right pb-5 px-3" id="func-buttons">
                     <button type="button" class="btn btn-link" id="other" onclick="addOther()">Digər...</button>
                     <button type="button" class="btn btn-outline-primary" onclick="addQuestion()">Sual əlavə et</button>
-                    <button type="button" class="btn btn-outline-primary" onclick="addSelect()">Variant əlavə et</button>
+                    <button type="button" class="btn btn-outline-primary" onclick="addSelect()">Variant əlavə
+                      et</button>
                     <button type="button" class="delete-button btn btn-outline-danger">Sil</button>
                   </div>
                 </form>
