Solved metging problem with frok branch

--- a/results.html
+++ b/results.html
@@ -117,7 +117,7 @@
                   <td>700azn</td>
                   <td> <a href="" data-toggle="modal" class="delete-button text-danger">Sil</a></td>
                   <td>
-                    <a href="./look.html" class="text-success pr-3">Bax</a> </td>
+                    <a href="./inspect.html" class="text-success pr-3">Bax</a> </td>
                 </tr>
 
                 <tr>
